[gd_scene load_steps=4 format=3 uid="uid://c24lqhtlmlj1j"]

[ext_resource type="Script" path="res://scenes/main/drillMinigame.gd" id="1_6gbuv"]
[ext_resource type="PackedScene" uid="uid://ddm5bjuwve5lu" path="res://scenes/subscenes/minigames/drillSample.tscn" id="2_xgw4l"]
[ext_resource type="PackedScene" uid="uid://bgxqr2cd6r4en" path="res://scenes/main/minigameMenu.tscn" id="3_iqf8j"]

[node name="drillMinigame" type="Node2D"]
script = ExtResource("1_6gbuv")

[node name="drillSample" parent="." instance=ExtResource("2_xgw4l")]

[node name="ColorRect" type="ColorRect" parent="drillSample"]
offset_left = 704.0
offset_top = 128.0
offset_right = 1472.0
offset_bottom = 768.0
color = Color(0, 0, 0, 0.196078)

[node name="minigameMenu" parent="." instance=ExtResource("3_iqf8j")]

[connection signal="hit" from="drillSample" to="." method="_on_drill_sample_hit"]
[connection signal="timeout" from="drillSample" to="." method="_on_drill_sample_timeout"]
[connection signal="minigameAbort" from="minigameMenu" to="." method="_on_minigame_menu_minigame_abort"]
[connection signal="toolID" from="minigameMenu" to="." method="_on_minigame_menu_tool_id"]
